syntax = "proto3";
package pb;
option go_package = "internal/pb";
import "google/protobuf/empty.proto";


message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CategoryResponse {
 Category category = 1;
}

message CategoryListResponse {
  repeated Category categories = 1;
}

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
}

message GetCategoryRequest {
  string id = 1;
}

service CategoryService {
  rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse){}
  rpc CreateCategoryStream(stream CreateCategoryRequest) returns (CategoryListResponse){}
  rpc ListCategory(google.protobuf.Empty) returns (CategoryListResponse){}
  rpc GetCategory(GetCategoryRequest) returns (CategoryResponse){}
}